# programowanieWiR

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/kernel/: asgi.py  settings.py  urls.py  wsgi.py
