[tool.poetry]
name = "programowanie wir"
version = "0.1.0"
description = ""
authors = ["Krzysztof Sikora <226458@student.uek.krakow.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
